[tool.poetry]
name = "osc-mocap"
version = "0.1.0"
description = ""
authors = ["VarYU <74352052+VarYUvrc@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "osc_mocap"}]

[tool.poetry.dependencies]
python = "3.8.10"
python-osc = "^1.8.1"
scipy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
